# tryexpand

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  renovate.json
.github/workflows/: ci.yml  other.yml  rust.yml
src/: cargo.rs  dependencies.rs  error.rs  expand.rs  expansion.rs  features.rs  lib.rs  manifest.rs  message.rs  normalization.rs  options.rs  project.rs  run.rs  rustflags.rs  test.rs  test_suite.rs  utils.rs
src/normalization/: check.rs  expand.rs  run.rs  test.rs  utils.rs
test-procmacro-project/: Cargo.toml
test-procmacro-project/tests/: tests.rs
test-project/: Cargo.toml  README.md
test-project/tests/: par_tests_regression.rs  tests.rs
tests/macro-tests/: Cargo.toml
tests/macro-tests/src/: lib.rs
tests/macro-tests/tests/: tests.rs
tests/macro-tests/tests/expand/fail/: first.expanded.rs  invalid.error.txt  invalid.expanded.rs  invalid.rs  missing_feature.err.txt  non_existent_attr_macro.err.txt  non_existent_attr_macro.out.rs  non_existent_attr_macro.rs  non_existent_derive_macro.err.txt  non_existent_derive_macro.out.rs  non_existent_derive_macro.rs  non_existent_macro.err.txt  non_existent_macro.rs  second.error.txt  second.expanded.rs
tests/macro-tests/tests/expand/pass/: first.expanded.rs  first.rs  fourth.expanded.rs  fourth.rs  invalid_output.out.rs  invalid_output.rs  second.expanded.rs  second.rs  third.expanded.rs  third.rs  valid.expand.out.rs  valid_input.rs
tests/macro-tests/tests/expand_args/fail/: with_args.error.txt  with_args.expanded.rs  with_args.rs
tests/macro-tests/tests/expand_args/pass/: with_args.expanded.rs
tests/macro-tests/tests/expand_checking/fail/: invalid.expand.err.txt  invalid.expand.out.rs  invalid.rs  missing_feature.expand.err.txt  missing_feature.rs
tests/macro-tests/tests/expand_checking/pass/: valid.out.rs  valid.rs
tests/macro-tests/tests/expand_opts/fail/: with_args.error.txt  with_args.expanded.rs
tests/other-tests/: Cargo.toml
tests/other-tests/src/: lib.rs
tests/other-tests/tests/: tests.rs
tests/proc-macro-tests/: Cargo.toml
tests/proc-macro-tests/src/: lib.rs
tests/proc-macro-tests/tests/: tests.rs
tests/proc-macro-tests/tests/fail/: attribute.expanded.rs  derive.expanded.rs  macro.expanded.rs
tests/proc-macro-tests/tests/pass/: attribute.expanded.rs  attribute.rs  derive.expanded.rs  derive.rs  macro.expanded.rs  macro.rs
tests/virtual-workspace-tests/: Cargo.toml
tests/virtual-workspace-tests/excluded-tests/tests/: tests.rs
tests/workspace-tests/: Cargo.toml
tests/workspace-tests/excluded-tests/: Cargo.toml
tests/workspace-tests/member-tests/: Cargo.toml
(+92 files in other folders)
