[workspace]
members = []
exclude = [
    "./tests/macro-tests",
    "./tests/other-tests",
    "./tests/proc-macro-tests",
    "./tests/virtual-workspace-tests",
    "./tests/workspace-tests",
]
resolver = "2"

[package]
name = "tryexpand"
description = "Test harness for macro expansion"
authors = ["Vincent Esche <regexident@gmail.com>", "eupn <eupn@protonmail.com>"]
repository = "https://github.com/regexident/tryexpand"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.74"
version = "0.8.0"

[dependencies]
base62 = "2.0.2"
basic-toml = "0.1"
cargo_metadata = "0.18.1"
cargo_toml = "0.19.1"
diff = "0.1"
glob = "0.3"
prettyplease = "0.2"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
syn = { version = "2", features = ["full"] }
thiserror = "1.0.57"
yansi = "0.5.1"
